# daaa-ihw2

./: README.md
DaAA_IHW_2/: CMakeLists.txt
Notebooks/: counter_dimention.ipynb  counter_dimention.py  time_dimention.ipynb  time_dimention.py
Report/: report.docx
Tests/: test_counter_0.csv  test_counter_1.csv  test_counter_2.csv  test_counter_3.csv  test_counter_4.csv  test_time_0.csv  test_time_1.csv  test_time_2.csv  test_time_3.csv  test_time_4.csv  test_view.txt
Tests/1-repeat/: test_time_0.csv  test_time_1.csv  test_time_2.csv  test_time_3.csv  test_time_4.csv  test_view.txt
Tests/10-repeats/: test_time_0.csv  test_time_1.csv  test_time_2.csv  test_time_3.csv  test_time_4.csv  test_view.txt
Tests/20-repeats/: test_time_0.csv  test_time_1.csv  test_time_2.csv  test_time_3.csv  test_time_4.csv  test_view.txt
Tests/5-repeats/: test_time_0.csv  test_time_1.csv  test_time_2.csv  test_time_3.csv  test_time_4.csv  test_view.txt
Tests/50-repeats/: test_time_0.csv  test_time_1.csv  test_time_2.csv  test_time_3.csv  test_time_4.csv  test_view.txt
